kubernetes/dev/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-app
  namespace: ecommerce-dev
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        image: 072672872821.dkr.ecr.ap-south-1.amazonaws.com/back-end-ecr
        ports:
        - containerPort: 8080
