kubernetes/dev/back-end-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: ecommerce-dev
spec:
  selector:
    app: backend
  ports:
    - port: 8080
      targetPort: 8080
  type: ClusterIP
