kubernetes/dev/fronttend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-app
  namespace: ecommerce-dev
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: 072672872821.dkr.ecr.ap-south-1.amazonaws.com/front-end-ecr
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: ecommerce-dev
spec:
  selector:
    app: frontend
  ports:
    - port: 80
      targetPort: 3000
  type: ClusterIP
